[package]
name = "ecli"
version = "0.1.0"
authors =["Bob <vshader@qq.com"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
